Fix mobile view overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@
 
 
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     background: linear-gradient(135deg, var(--grad-color-1), var(--grad-color-2)),
                 linear-gradient(135deg, var(--grad-color-3), var(--grad-color-4));
-    height: 100vh;
+    max-width: 100vw;
 }
 
 h1 {
@@ -29,6 +29,10 @@ h1 {
 h1 > span {
     color: var(--desaturated-red);
     font-weight: 300;
+}
+
+.our-message, .input-group {
+    margin: 0 30px;
 }
 
 .our-message {
@@ -44,7 +48,7 @@ h1 > span {
     border: 1px solid var(--desaturated-red);
     border-radius: 50px;
     display: flex;
-    margin: 25px 0;
+    margin: 25px 30px;
 }
 
 
@@ -86,9 +90,11 @@ header > img {
 
 
 .form-container {
-    padding: 0 30px;
     padding-top: 60px;
+    width: 100%;
 }
+
+
 
 
 .attribution { 
@@ -98,3 +104,8 @@ header > img {
     color: var(--desaturated-red);
     text-decoration: none;
 }
+
+
+
+/*============ Desktop View ===============*/
+
